--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "concurrently": "^5.2.0",
     "fork-ts-checker-webpack-plugin": "^3.0.1",
     "jest": "^26.2.2",
+    "jest-extended": "^0.11.5",
     "nodemon": "^2.0.4",
     "serverless-offline": "^6.5.0",
     "serverless-plugin-typescript": "^1.1.9",
