--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "start": "npm run build-ts && npm run serve",
     "debug": "node --inspect-brk ./dist/src/server.js",
     "test": "jest",
-    "test:e2e": "jest --config ./jest-e2e.json"
+    "test:e2e": "jest --config ./jest-e2e.json",
+    "lint": "tslint -p tsconfig.json -c tslint.json"
   },
   "dependencies": {
     "async": "^3.2.0",
@@ -49,6 +50,7 @@
     "ts-jest": "^26.1.4",
     "ts-loader": "^5.3.3",
     "ts-node": "^8.10.2",
+    "tslint": "^6.1.3",
     "typescript": "^3.2.4",
     "webpack": "^4.29.0",
     "webpack-node-externals": "^1.7.2"
